# Python3 toolchain used by pkg_deb, compatible with everything.
load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

py_runtime(
    name = "python3/runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
    stub_shebang = "#!/usr/bin/python3",  # For gods' sake, stop using /usr/bin/env python3, you never know which (if any) one you'll get
)

py_runtime_pair(
    name = "python/runtimes",
    py3_runtime = ":python3/runtime",
)

toolchain(
    name = "python",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":python/runtimes",
    toolchain_type = "@rules_python//python:toolchain_type",
)
