load("@rules_python//python:defs.bzl", "py_runtime", "py_runtime_pair")

# A non-hermetic Python toolchain.

# Define a Python 3 toolchain used by pkg_*, compatible with everything. We
# could be more specific in here (a la //platforms/cc) but it's over the top
# for Python, assuming that all the various 3.x versions are compatible enough.

py_runtime(
    name = "python3/runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
    stub_shebang = "#!/usr/bin/python3",
)

py_runtime_pair(
    name = "python/runtimes",
    py3_runtime = ":python3/runtime",
)

toolchain(
    name = "python",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":python/runtimes",
    toolchain_type = "@rules_python//python:toolchain_type",
)
