# RPM Build toolchain used by pkg_rpm, compatible only with redhat family.
load("@rules_pkg//toolchains/rpm:rpmbuild.bzl", "rpmbuild_toolchain")

rpmbuild_toolchain(
    name = "rpmbuild",
    path = "/usr/bin/rpmbuild",
)

toolchain(
    name = "redhat",
    exec_compatible_with = [
        "//platforms/family:redhat",
    ],
    target_compatible_with = [
        "//platforms/family:redhat",
    ],
    toolchain = ":rpmbuild",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)
