# RPM Build toolchain used by pkg_rpm, compatible only with redhat family.
load("@rules_pkg//toolchains/rpm:rpmbuild.bzl", "rpmbuild_toolchain")

rpmbuild_toolchain(
    name = "default",
    path = "/usr/bin/rpmbuild",
)

toolchain(
    name = "rpmbuild",
    exec_compatible_with = [
        "//platforms/family:redhat",
    ],
    target_compatible_with = [
        "//platforms/family:redhat",
    ],
    toolchain = ":default",
    toolchain_type = "@rules_pkg//toolchains/rpm:rpmbuild_toolchain_type",
)

exports_files(["template.spec.tpl"])
